--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 
 <body>
  <div class="login">
-	<h1>Predict Insurance Bill</h1>
+	<h1>WELCOME TO DEVUS INSURANCE APP</h1>
 
      <!-- Form to enter new data for predictions  -->
     <form action="{{ url_for('predict')}}"method="POST">
